--- a/configs/tq2440_defconfig
+++ b/configs/tq2440_defconfig
@@ -3,12 +3,12 @@ CONFIG_TARGET_TQ2440=y
 CONFIG_BOOTDELAY=5
 CONFIG_HUSH_PARSER=y
 CONFIG_SYS_PROMPT="TQ2440 # "
-CONFIG_CMD_USB=y
+# CONFIG_CMD_USB=y
 # CONFIG_CMD_SETEXPR is not set
-CONFIG_CMD_DHCP=y
-CONFIG_CMD_PING=y
-CONFIG_CMD_CACHE=y
-CONFIG_CMD_EXT2=y
-CONFIG_CMD_FAT=y
-CONFIG_USB=y
-CONFIG_USB_STORAGE=y
+# CONFIG_CMD_DHCP=y
+# CONFIG_CMD_PING=y
+# CONFIG_CMD_CACHE=y
+# CONFIG_CMD_EXT2=y
+# CONFIG_CMD_FAT=y
+# CONFIG_USB=y
+# CONFIG_USB_STORAGE=y
