add nand start up code

--- a/configs/tq2440_defconfig
+++ b/configs/tq2440_defconfig
@@ -3,6 +3,7 @@ CONFIG_TARGET_TQ2440=y
 CONFIG_BOOTDELAY=5
 CONFIG_HUSH_PARSER=y
 CONFIG_SYS_PROMPT="TQ2440 # "
+CONFIG_START_NAND=y
 # CONFIG_CMD_USB=y
 # CONFIG_CMD_SETEXPR is not set
 # CONFIG_CMD_DHCP=y
