--- a/arch/arm/lib/Makefile
+++ b/arch/arm/lib/Makefile
@@ -14,7 +14,13 @@ obj-y	+= vectors_m.o crt0.o
 else ifdef CONFIG_ARM64
 obj-y	+= crt0_64.o
 else
+
+ifdef CONFIG_START_NAND
++extra-y    += vectors.o crt0.o
+else
 obj-y	+= vectors.o crt0.o
+endif
+
 endif
 
 ifndef CONFIG_SPL_BUILD
